--- a/gb/16/6/17/n8008824.md
+++ b/gb/16/6/17/n8008824.md
@@ -1,27 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jpwvgr227/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jpwvgr227/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共强摘器官曝光10年 国际议案谴责不断</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2013/11/0905301900201892-600x400.jpg" />
 <h6>瑞士日内瓦联合国万国宫。(EET/大纪元) 
 </h6>
 <hr>
-<p>【大纪元2016年06月17日讯】（大纪元记者李辰综合报导）8月18日，两年一度的世界<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md">器官</a>移植大会在香港湾仔会展中心召开。会议因邀请包括前中共卫生部副部长黄洁夫等多个中国医生被指控参与<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98.md">活摘</a>人体器官等罪行，而遭到国际医学界和人权组织的谴责和杯葛。</p>
-<p>从2006年开始，中共<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98.md">活摘</a>人体<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md">器官</a>黑幕曝光10年以来，大量调查报告指证中共这一罪行。美国、欧洲议会、澳洲、意大利、加拿大、爱尔兰等多国政府部门、机构相继通过<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%86%B3%E8%AE%AE%E6%A1%88.md">决议案</a>，制止中共强摘<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>学员等良心犯器官。其中，以色列、西班牙和台湾还通过立法，遏阻本国公民到中国做器官移植。</p>
-<p><strong>美国会众议院通过343号<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%86%B3%E8%AE%AE%E6%A1%88.md">决议案</a> ?</strong></p>
-<p>2016年6月13日，美国国会众议院以“呼声表决”（voice vote)的方式一致通过了343号决议案，要求中共立即停止针对<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>学员等良心犯的“<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md">强摘器官</a>”行为。343号决议案获得185位国会议员的联署。<a href="https://www.congress.gov/bill/114th-congress/house-resolution/343/text" target="_blank">（点击美国众议院343号决议案网址。）</a></p>
+<p>【大纪元2016年06月17日讯】（大纪元记者李辰综合报导）8月18日，两年一度的世界<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>移植大会在香港湾仔会展中心召开。会议因邀请包括前中共卫生部副部长黄洁夫等多个中国医生被指控参与<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98.md#1">活摘</a>人体器官等罪行，而遭到国际医学界和人权组织的谴责和杯葛。</p>
+<p>从2006年开始，中共<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98.md#1">活摘</a>人体<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>黑幕曝光10年以来，大量调查报告指证中共这一罪行。美国、欧洲议会、澳洲、意大利、加拿大、爱尔兰等多国政府部门、机构相继通过<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%86%B3%E8%AE%AE%E6%A1%88.md#1">决议案</a>，制止中共强摘<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员等良心犯器官。其中，以色列、西班牙和台湾还通过立法，遏阻本国公民到中国做器官移植。</p>
+<p><strong>美国会众议院通过343号<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%86%B3%E8%AE%AE%E6%A1%88.md#1">决议案</a> ?</strong></p>
+<p>2016年6月13日，美国国会众议院以“呼声表决”（voice vote)的方式一致通过了343号决议案，要求中共立即停止针对<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员等良心犯的“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md#1">强摘器官</a>”行为。343号决议案获得185位国会议员的联署。<ahref="https://www.congress.gov/bill/114th-congress/house-resolution/343/text" target="_blank">（点击美国众议院343号决议案网址。）</a></p>
 <figure id="attachment_8216565" style="width: 600px" class="wp-caption aligncenter"><img class="size-medium wp-image-8216565" src="https://i.epochtimes.com/assets/uploads/2016/06/Screen-Shot-2016-08-19-at-1.07.44-AM-450x236.png" alt="（网络截图）" width="600" b="315" /><figcaption class="wp-caption-text">（美国国会网站截图）</figcaption></figure>
 <p>这份议案的起草人安娜?罗斯-雷婷恩（Ileana Ros-Lehtinen）议员在6月13日众议院全体会议的发言中说：“2015年度自由之家的报告显示，法轮功学员是中国良心犯的最主要组成部分。”</p>
 <p>她表示，《纽约时报》近期报导了有中国医生计划进行全身器官移植，“这对于中国境内的法轮功学员和其他良心犯意味着什么？当我想到这种非人性的实验会给他们的生命带来什么时，我浑身战栗发抖。”</p>
-<p>罗斯-雷婷恩议员说：“借由该决议案，我们向中共政权发出一个信息，我们谴责针对法轮功学员的持续迫害，这种迫害是令人作呕的，这种不道德的行为必须停止，特别是在未得到个人许可的情况下进行<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md">强摘器官</a>。我们不能允许这种罪行继续。”</p>
+<p>罗斯-雷婷恩议员说：“借由该决议案，我们向中共政权发出一个信息，我们谴责针对法轮功学员的持续迫害，这种迫害是令人作呕的，这种不道德的行为必须停止，特别是在未得到个人许可的情况下进行<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md#1">强摘器官</a>。我们不能允许这种罪行继续。”</p>
 <p>中共强摘器官的行为“必须遭到普遍反对，无条件地终结”。</p>
-<p>美国上一届国会曾在2013年6月27日发起“281号决议案”，要求中共停止强摘法轮功学员的器官。343号决议案被认为是“281号决议案”的继续。281议案获得245位议员联署（占国会席位的56%）。<a href="https://www.congress.gov/bill/113th-congress/house-resolution/281" target="_blank">（点击281号决议案网址。）</a></p>
+<p>美国上一届国会曾在2013年6月27日发起“281号决议案”，要求中共停止强摘法轮功学员的器官。343号决议案被认为是“281号决议案”的继续。281议案获得245位议员联署（占国会席位的56%）。<ahref="https://www.congress.gov/bill/113th-congress/house-resolution/281" target="_blank">（点击281号决议案网址。）</a></p>
 <figure id="attachment_8216569" style="width: 600px" class="wp-caption aligncenter"><img class="size-medium wp-image-8216569" src="https://i.epochtimes.com/assets/uploads/2016/06/Screen-Shot-2016-08-19-at-1.10.23-AM-450x235.png" alt="（网络截图）" width="600" b="315" /><figcaption class="wp-caption-text">（美国国会网站截图）</figcaption></figure>
 <p><strong>欧洲议会通过48号书面声明和“制止中共活摘器官”紧急议案</strong></p>
 <p>截至2016年7月27日，欧洲议会制止中共活摘器官的48号书面声明，获得413位议员的签名支持。如果该书面声明获得半数以上议员签名支持，就将提交给欧洲理事会和欧盟委员会，这两个部门被要求调查中共活摘罪行，并敦促欧盟各国公开谴责这一罪行。迄今，所有欧盟28个成员国都有议员签署这份声明，而且是来自欧洲议会里的所有党团。</p>
 <figure id="attachment_8216413" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-8216413" src="https://i.epochtimes.com/assets/uploads/2016/06/a1-450x598.jpg" alt="欧洲议会48号书面声明内容，要求调查、制止中共活摘器官。（新唐人）" width="450" b="600" /><figcaption class="wp-caption-text">欧洲议会48号书面声明（新唐人）</figcaption></figure>
 <figure id="attachment_8216415" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-8216415" src="https://i.epochtimes.com/assets/uploads/2016/06/a2-450x646.jpg" alt="欧洲议会48号书面声明内容，要求调查、制止中共活摘器官。（新唐人）" width="450" b="600" /><figcaption class="wp-caption-text">欧洲议会48号书面声明（新唐人）</figcaption></figure>
-<p>2013年12月12日，欧洲议会（European Parliament）在法国斯特拉斯堡投票通过一项紧急议案，要求“中共立即停止活体摘除良心犯，以及宗教信仰和少数族裔团体器官的行为”。欧洲议会呼吁欧盟针对中共的器官移植行为进行全面且透明的调查，并呼吁欧盟对那些参与违反器官移植伦理行为的人提出起诉。<a href="http://www.europarl.europa.eu/sides/getDoc.do?pubRef=-//EP//TEXT+MOTION+P7-RC-2013-0562+0+DOC+XML+V0//EN" target="_blank">（点击欧洲议会紧急议案网址。）</a></p>
+<p>2013年12月12日，欧洲议会（European Parliament）在法国斯特拉斯堡投票通过一项紧急议案，要求“中共立即停止活体摘除良心犯，以及宗教信仰和少数族裔团体器官的行为”。欧洲议会呼吁欧盟针对中共的器官移植行为进行全面且透明的调查，并呼吁欧盟对那些参与违反器官移植伦理行为的人提出起诉。<ahref="http://www.europarl.europa.eu/sides/getDoc.do?pubRef=-//EP//TEXT+MOTION+P7-RC-2013-0562+0+DOC+XML+V0//EN" target="_blank">（点击欧洲议会紧急议案网址。）</a></p>
 <figure id="attachment_8216558" style="width: 600px" class="wp-caption aligncenter"><img class="size-medium wp-image-8216558" src="https://i.epochtimes.com/assets/uploads/2016/06/Screen-Shot-2016-08-19-at-1.05.16-AM-450x225.png" alt="（网络截图）" width="600" b="310" /><figcaption class="wp-caption-text">（欧洲议会网站截图）</figcaption></figure>
 <p>欧洲议会决议由基督教民主党、自由党、保守党、绿党、欧洲联合左派——北欧绿色左派等5个政党的56个议员联合提议。通过40分钟的辩论后以绝对多数投票通过。欧盟由28个国家公民组成，欧洲议会的决议代表着全球5亿人口的民意。</p>
 <p><strong>联合国禁止酷刑委员会：要求调查中共强摘器官指控</strong></p>
@@ -32,9 +32,9 @@
 <p>2008年6月，澳洲外交部长史蒂芬?史密斯（Stephen Smith）表示，他与官员在阅读加拿大独立调查报告后，认为“指控可信”、“我们要求中国解释强摘器官的指控，并建议允许独立可信的调查人不受拘束的进行调查。”</p>
 <p><strong>意大利参议院人权委员会通过决议</strong></p>
 <p>二零一四年三月五日，意大利参议院人权委员会一致通过了一项243号决议 (Doc. XXIV-ter, n. 7)，要求意大利政府敦促中共立即释放良心犯，包括法轮功学员，并对中共活摘器官的罪行展开全面调查。</p>
-<figure style="width: 300px" class="wp-caption aligncenter"><a href=" http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-01.jpg"><img src=" http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-01.jpg" alt="" width="300" b="450" /></a><figcaption class="wp-caption-text">意大利参议院决议案原文（明慧网）</figcaption></figure>
-<figure style="width: 300px" class="wp-caption aligncenter"><a href="http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-02.jpg"><img src="http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-02.jpg" alt="" width="300" b="450" /></a><figcaption class="wp-caption-text">意大利参议院决议案原文（明慧网）</figcaption></figure>
-<figure style="width: 300px" class="wp-caption aligncenter"><a href="http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-03.jpg"><img src="http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-03.jpg" alt="" width="300" b="450" /></a><figcaption class="wp-caption-text">意大利参议院决议案原文（明慧网）</figcaption></figure>
+<figure style="width: 300px" class="wp-caption aligncenter"><ahref=" http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-01.jpg"><img src=" http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-01.jpg" alt="" width="300" b="450" /></a><figcaption class="wp-caption-text">意大利参议院决议案原文（明慧网）</figcaption></figure>
+<figure style="width: 300px" class="wp-caption aligncenter"><ahref="http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-02.jpg"><img src="http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-02.jpg" alt="" width="300" b="450" /></a><figcaption class="wp-caption-text">意大利参议院决议案原文（明慧网）</figcaption></figure>
+<figure style="width: 300px" class="wp-caption aligncenter"><ahref="http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-03.jpg"><img src="http://big5.minghui.org/mh/article_images/2014-3-13-minghui-italy-resolution-03.jpg" alt="" width="300" b="450" /></a><figcaption class="wp-caption-text">意大利参议院决议案原文（明慧网）</figcaption></figure>
 <p>在这项决议通过前，有着280多万读者群的意大利共和国报(La Repubblica)在报导中表示，中共活摘法轮功学员器官是恶魔行为。</p>
 <p><strong>加拿大国会国际人权委员会动议</strong></p>
 <p>加拿大国会国际人权委员会于2014年11月6日通过动议，对中共当局“活摘‘良心犯’、宗教团体和少数族裔成员的器官用于移植的可信的指控深表关注，谴责并要求立即停止未经同意就从活体或死者的捐助者身上摘取器官。”</p>
@@ -44,7 +44,7 @@
 <p><strong>台湾立法院全体决议</strong></p>
 <p>2012年12月11日，台湾立法院全体无异议通过决议，要求中华民国政府关注营救被关押的包括法轮功学员在内的4,033名中国良心犯，决议内容并提及，依据美国及联合国等人权报告显示，法轮功学员及西藏图博人士是遭关押及迫害中最严重、大量的群体，并指责“中国活摘法轮功学员及死刑犯器官做为买卖移植之用”“骇人听闻”“天理难容”。</p>
 <p><strong>美国维吉尼亚州医学会决议案</strong></p>
-<p>2013年10月25-27日年会期间，美国维吉尼亚州医学会（the Medical Society of Virginia，MSV）正式讨论一份“制止中共活摘器官”的13-207号决议案，随后在其法律、非法行医，以及规章制度常设委员会上获得通过。这一决议案旨在支持美国国会通过相关决议案。<a href="http://www.msv.org/DocumentVault/PDFs/2013-Annual-Meeting/13-207A-Resolution-to-SupporCo-sponsor-US-HR-281PAGES-146-TO-150.aspx" target="_blank">（点击美国维州医学会13-207号决议案网址。）</a></p>
+<p>2013年10月25-27日年会期间，美国维吉尼亚州医学会（the Medical Society of Virginia，MSV）正式讨论一份“制止中共活摘器官”的13-207号决议案，随后在其法律、非法行医，以及规章制度常设委员会上获得通过。这一决议案旨在支持美国国会通过相关决议案。<ahref="http://www.msv.org/DocumentVault/PDFs/2013-Annual-Meeting/13-207A-Resolution-to-SupporCo-sponsor-US-HR-281PAGES-146-TO-150.aspx" target="_blank">（点击美国维州医学会13-207号决议案网址。）</a></p>
 <p>13-207议案的发起人Manuel M. Belandres是维吉尼亚州医学协会成员，资深创伤外科及急救手术医生。他是美国社区急救基金会（The American Foundation For Emergency Community）创始人，并担任该基金会主席多年。</p>
 <p>对于为什么会发起这一决议案，Belandres医生在采访中说，“我认为这是医学上的大屠杀，他们（中共）必须停止（这一罪行）！唯一阻止他们的方式是向他们发出良心的呼唤！”“这需要在中国很快发生改变。”“必须停止。这很重要！”</p>
 <p>对于中共活摘信仰真善忍的法轮功学员的器官，他说，“这是绝对完全错误的！这是一种新的邪恶方式！”“正如加拿大的两位资深律师David Kilgour 和David Matas所描述的，这是这个星球上从未有过的罪恶！”</p>
@@ -75,38 +75,49 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/16/6/17/n8008824.htm">中共强摘器官曝光10年 国际议案谴责不断</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882030.htm">湖北新增349其中武汉615？离奇统计引热议</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882754.htm">【翻墙必看】武汉单日近3万人外逃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883869.htm">新冠肺炎出院人数破万？一线医生揭实情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/31/n11758244.htm">【三国英雄11】乱世枭雄袁绍（文字版）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881829.htm">【拍案惊奇】新病毒无特效药 病患求生要闯2关</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878288.htm">【新闻看点】封城封区封声 习掀“人民战争”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/6/13/n7993974.md#1">美众院通过343号决议案 制止中共强摘器官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/12/16/n4597347.md#1">跨越国界 新加坡民众踊跃签名举报江泽民</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/11/1/n4563550.md#1">亚洲近77万人举报 要求大陆速究江泽民罪行</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/7/25/n4488765.md#1">法轮功历程系列（下） 反迫害诉江大潮</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/6/20/n4461791.md#1">美国会发起343号决议案 制止中共活摘器官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/4/25/n4420089.md#1">纪录片赢得著名的皮博迪奖 曝光中共活摘器官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/8/26/n4233995.md#1">三本书详证中共大规模活摘器官罪行</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/7/16/n4201416.md#1">7.20法轮功反迫害15周年 美国首都活动通告</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/3/20/n4110675.md#1">葡萄牙主要电视台报导中共活摘器官暴行 震惊全国</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/3/5/n4098634.md#1">美国谴责活摘器官 中共原卫生部高官慌忙表态</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jpwvgr227/djy/blob/master/gb/16/6/17/n8008824.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/6/21/n8020684.md#1">美国343号决议案背后的血与泪</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/6/17/n8007879.md#1">英国医学期刊：《中国可怕的秘密移植》</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/20/n2971015.md#1" target="_blank">田璐：让正义和希望之声长鸣于全人类的上空</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/6/17/n8008824.htm">中共强摘器官曝光10年 国际议案谴责不断</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/16/6/17/n8008824.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
